[gd_scene load_steps=27 format=3 uid="uid://bvr2oi6y8bcxk"]

[ext_resource type="Script" path="res://scenes/characters/maemi/maemi.gd" id="1_u51bu"]
[ext_resource type="PackedScene" uid="uid://b5q57w75hcnaa" path="res://scenes/components/flip_2d.tscn" id="2_t5abb"]
[ext_resource type="PackedScene" uid="uid://ioa00g5nnrn2" path="res://scenes/components/interactor.tscn" id="3_8x6wy"]
[ext_resource type="PackedScene" uid="uid://2faqg6de4wtl" path="res://scenes/components/movement_2d.tscn" id="4_t2iv1"]
[ext_resource type="Texture2D" uid="uid://bbuhtmw4f2nsa" path="res://icon.svg" id="5_5sxi3"]
[ext_resource type="PackedScene" uid="uid://dqupomonxf4ug" path="res://scenes/components/flip_sort_2d.tscn" id="5_lb7kc"]
[ext_resource type="Texture2D" uid="uid://4a6ne7ic4lh3" path="res://body_example.png" id="6_84sm4"]
[ext_resource type="PackedScene" uid="uid://b03emya1b4af6" path="res://scenes/components/jump_2d.tscn" id="6_vwq21"]
[ext_resource type="PackedScene" uid="uid://cwr3j85yhnxdm" path="res://scenes/components/input_buffer.tscn" id="7_w4ta8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ldgvj"]
radius = 32.0
height = 128.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n2nod"]
size = Vector2(64, 64)

[sub_resource type="Animation" id="Animation_utg8m"]
resource_name = "idle"
loop_mode = 1

[sub_resource type="Animation" id="Animation_7j12l"]
resource_name = "kick"

[sub_resource type="Animation" id="Animation_erang"]
resource_name = "punch"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jsy5x"]
_data = {
"idle": SubResource("Animation_utg8m"),
"kick": SubResource("Animation_7j12l"),
"punch": SubResource("Animation_erang")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fm0tt"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_px4g1"]
animation = &"kick"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3jfqn"]
animation = &"punch"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w4lx2"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4imla"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ieg74"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_r1ql0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8pec1"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ypp6s"]
states/End/position = Vector2(321, -30)
states/Start/position = Vector2(223, -30)
states/idle/node = SubResource("AnimationNodeAnimation_fm0tt")
states/idle/position = Vector2(223, 44)
states/kick/node = SubResource("AnimationNodeAnimation_px4g1")
states/kick/position = Vector2(321, 125)
states/punch/node = SubResource("AnimationNodeAnimation_3jfqn")
states/punch/position = Vector2(223, 125)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_w4lx2"), "idle", "punch", SubResource("AnimationNodeStateMachineTransition_4imla"), "punch", "idle", SubResource("AnimationNodeStateMachineTransition_ieg74"), "idle", "kick", SubResource("AnimationNodeStateMachineTransition_r1ql0"), "kick", "idle", SubResource("AnimationNodeStateMachineTransition_8pec1")]
graph_offset = Vector2(-80, -99)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_kjjio"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_his4j"]
bg_color = Color(0, 0, 0, 0.784314)

[node name="Maemi" type="CharacterBody2D" node_paths=PackedStringArray("movement", "jump", "interactor", "input_buffer", "animator")]
script = ExtResource("1_u51bu")
movement = NodePath("Movement2D")
jump = NodePath("Jump2D")
interactor = NodePath("Flip2D/Interactor")
input_buffer = NodePath("InputBuffer")
animator = NodePath("AnimationTree")

[node name="FeetCollision" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ldgvj")
debug_color = Color(0, 0, 0, 0.419608)

[node name="Flip2D" parent="." instance=ExtResource("2_t5abb")]

[node name="Interactor" parent="Flip2D" instance=ExtResource("3_8x6wy")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flip2D/Interactor"]
position = Vector2(32, 0)
shape = SubResource("RectangleShape2D_n2nod")
debug_color = Color(0, 1, 0, 0.419608)

[node name="Movement2D" parent="." instance=ExtResource("4_t2iv1")]

[node name="Camera2D" type="Camera2D" parent="Movement2D"]
process_callback = 0
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="Flip2D" parent="Movement2D" instance=ExtResource("2_t5abb")]

[node name="FlipSort2D" parent="Movement2D/Flip2D" node_paths=PackedStringArray("flip_2d") instance=ExtResource("5_lb7kc")]
flip_2d = NodePath("..")

[node name="Left" type="Sprite2D" parent="Movement2D/Flip2D/FlipSort2D"]
modulate = Color(0.14902, 0, 1, 1)
position = Vector2(16, -64)
texture = ExtResource("5_5sxi3")

[node name="Icon" type="Sprite2D" parent="Movement2D/Flip2D/FlipSort2D"]
position = Vector2(0, -64)
texture = ExtResource("5_5sxi3")

[node name="Right" type="Sprite2D" parent="Movement2D/Flip2D/FlipSort2D"]
modulate = Color(1, 0, 0, 1)
position = Vector2(-16, -64)
texture = ExtResource("5_5sxi3")

[node name="Example" type="Sprite2D" parent="Movement2D/Flip2D"]
visible = false
modulate = Color(1, 1, 1, 0.141176)
texture_filter = 1
position = Vector2(0, -112)
texture = ExtResource("6_84sm4")

[node name="Hip" type="Polygon2D" parent="Movement2D/Flip2D"]
visible = false
position = Vector2(-16, -72)
rotation = -0.159498
offset = Vector2(16, 72)
polygon = PackedVector2Array(-40, -80, 8, -80, -16, -56)

[node name="Chest" type="Polygon2D" parent="Movement2D/Flip2D/Hip"]
z_index = 1
position = Vector2(0, -8)
rotation = 0.198074
color = Color(1, 0.85098, 0, 1)
offset = Vector2(16, 88)
polygon = PackedVector2Array(-40, -88, 8, -88, 16, -136, -48, -136)

[node name="LeftArm" type="Polygon2D" parent="Movement2D/Flip2D/Hip/Chest"]
z_index = -2
position = Vector2(32, -40)
rotation = -1.07202
color = Color(0, 0.466667, 1, 1)
offset = Vector2(32, 24)
polygon = PackedVector2Array(-32, -40, -48, -24, -32, 16, -16, -24)

[node name="LeftForearm" type="Polygon2D" parent="Movement2D/Flip2D/Hip/Chest/LeftArm"]
z_index = -3
position = Vector2(0, 40)
rotation = -1.96526
color = Color(0.235294, 1, 0, 1)
offset = Vector2(0, -40)
polygon = PackedVector2Array(0, 32, 8, 40, 0, 72, -8, 40)

[node name="RightArm" type="Polygon2D" parent="Movement2D/Flip2D/Hip/Chest"]
z_index = 2
position = Vector2(-32, -40)
rotation = -1.24997
color = Color(1, 0, 0.0509804, 1)
offset = Vector2(32, 24)
polygon = PackedVector2Array(-32, -40, -48, -24, -32, 16, -16, -24)

[node name="RightForearm" type="Polygon2D" parent="Movement2D/Flip2D/Hip/Chest/RightArm"]
z_index = 1
position = Vector2(0, 40)
rotation = -1.64236
color = Color(1, 0.482353, 0, 1)
offset = Vector2(0, -40)
polygon = PackedVector2Array(0, 32, 8, 40, 0, 72, -8, 40)

[node name="Head" type="Polygon2D" parent="Movement2D/Flip2D/Hip/Chest"]
position = Vector2(0, -48)
rotation = 0.328305
color = Color(0.729412, 0.670588, 0, 1)
offset = Vector2(0, 48)
polygon = PackedVector2Array(0, -80, -16, -64, 0, -48, 16, -64)

[node name="RightThigh" type="Polygon2D" parent="Movement2D/Flip2D/Hip"]
z_index = 1
position = Vector2(-8, 8)
rotation = -0.13179
color = Color(1, 0, 0.54902, 1)
offset = Vector2(8, -8)
polygon = PackedVector2Array(-24, 8, -8, -8, 8, 8, -8, 56)

[node name="RightLeg" type="Polygon2D" parent="Movement2D/Flip2D/Hip/RightThigh"]
z_index = 3
position = Vector2(0, 40)
rotation = 1.31456
color = Color(1, 0, 0.301961, 1)
offset = Vector2(0, -40)
polygon = PackedVector2Array(0, 32, -8, 40, 0, 88, 8, 40)

[node name="LeftThigh" type="Polygon2D" parent="Movement2D/Flip2D/Hip"]
z_index = -1
position = Vector2(8, 8)
rotation = -0.941195
color = Color(0.6, 0, 1, 1)
offset = Vector2(8, -8)
polygon = PackedVector2Array(-24, 8, -8, -8, 8, 8, -8, 56)

[node name="RightLeg2" type="Polygon2D" parent="Movement2D/Flip2D/Hip/LeftThigh"]
z_index = -2
position = Vector2(0, 40)
rotation = 0.960341
color = Color(0, 0.635294, 1, 1)
offset = Vector2(0, -40)
polygon = PackedVector2Array(0, 32, -8, 40, 0, 88, 8, 40)

[node name="Jump2D" parent="." node_paths=PackedStringArray("movement") instance=ExtResource("6_vwq21")]
movement = NodePath("../Movement2D")

[node name="InputBuffer" parent="." instance=ExtResource("7_w4ta8")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jsy5x")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_ypp6s")
anim_player = NodePath("../AnimationPlayer")
active = true
process_callback = 0
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_kjjio")

[node name="DebugUI" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="DebugUI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_right = 0.5
offset_bottom = 23.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_his4j")
text = "Current Animation"
